--- a/html.html
+++ b/html.html
@@ -33,7 +33,7 @@
       
     </article>
     <footer>
-      <p>&copy; 2021 Jeff LeBoeuf</p>
+      <p>&copy; 2021 Mark Dwomoh</p>
     </footer>
   </body>
 </html>
