--- a/html.html
+++ b/html.html
@@ -20,9 +20,9 @@
       
       <h3>HTML Skeleton</h3>
       <!-- Codepen snippet -->
-      <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="NWvpvRB" data-user="jeffhowcodes" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/jeffhowcodes/pen/NWvpvRB">
-  Skeleton Snippet</a> by Jeff LeBoeuf (<a href="https://codepen.io/jeffhowcodes">@jeffhowcodes</a>)
+     <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="LYjWjQx" data-user="sussybaka2002" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/sussybaka2002/pen/LYjWjQx">
+  Untitled</a> by SussyBaka2002 (<a href="https://codepen.io/sussybaka2002">@sussybaka2002</a>)
   on <a href="https://codepen.io">CodePen</a>.</span>
 </p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
