--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p>Welcome to my blog</p>
     </article>
     <footer>
-      <p>&copy; 2021 Jeff LeBoeuf</p>
+      <p>&copy; 2021 Mark Dwomoh</p>
     </footer>
   </body>
 </html>
