--- a/css.html
+++ b/css.html
@@ -9,6 +9,7 @@
       <nav>
         <ul>
           <li><a href="html.html">HTML</a></li>
+          <li><a href="css.html">CSS</a></li>
         </ul>
       </nav>
     </header>
