--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <header>
       <h1>Tech Blog</h1>
       <nav>
-        <ul>
+        <ul> 
+          <li><a href="index.html">HOME</a></li>
           <li><a href="html.html">HTML</a></li>
           <li><a href="css.html">CSS</a></li>
         </ul>
