--- a/cssbasics.html
+++ b/cssbasics.html
@@ -11,7 +11,7 @@
           <li><a href="index.html">HOME</a></li>
           <li><a href="html.html">HTML</a></li>
           <li><a href="css.html">CSS</a></li>
-          <li><a href="cssbasics.html">CSS</a></li>
+          <li><a href="cssbasics.html">CSSBASICS</a></li>
         </ul>
       </nav>
     </header>
