--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <body>
     <header>
       <h1>Tech Blog</h1>
-      <nav>
-        <ul> 
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="html.html">HTML</a></li>
-          <li><a href="css.html">CSS</a></li>
-          <li><a href="cssbasics.html">CSSBASICS</a></li>
+<nav class="primary-nav">
+      <ul class="primary-nav__list">
+          <li class="primary-nav__item"><a href="index.html" class="primary-nav__link">HOME</a></li>
+          <li class="primary-nav__item"><a href="html.html" class="primary-nav__link">HTML</a></li>
+          <li class="primary-nav__item"><a href="css.html" class="primary-nav__link">CSS</a></li>
+          <li class="primary-nav__item"><a href="cssbasics.html" class="primary-nav__link">CSSBASICS</a></li>
         </ul>
       </nav>
     </header>
