--- a/css.html
+++ b/css.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="https://github.com/SussyBaka2002/techblog/blob/main/website.css">
 <html>
   <head>
     <title>HTML</title>
