--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="https://github.com/SussyBaka2002/techblog/blob/main/website.css">
+    <link rel="stylesheet" href="website.css">
     <title>Tech Blog</title>
   </head>
   <body>
