--- a/cssbasics.html
+++ b/cssbasics.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>HTML</title>
-    <link rel="stylesheet" type="text/css" href="https://github.com/SussyBaka2002/techblog/blob/main/website.css">
+    <link rel="stylesheet" href="website.css">
   </head>
   <body>
     <header>
