--- a/cssbasics.html
+++ b/cssbasics.html
@@ -14,6 +14,7 @@
           <li class="primary-nav__item"><a href="html.html" class="primary-nav__link">HTML</a></li>
           <li class="primary-nav__item"><a href="css.html" class="primary-nav__link">CSS</a></li>
           <li class="primary-nav__item"><a href="cssbasics.html" class="primary-nav__link">CSSBASICS</a></li>
+          <li class="primary-nav__item"><a href="stacked.html" class="primary-nav__link">Simple Stacked Layout</a></li>
         </div>
         </ul>
       </nav>
