--- a/html.html
+++ b/html.html
@@ -15,6 +15,7 @@
           <li class="primary-nav__item"><a href="css.html" class="primary-nav__link">CSS</a></li>
           <li class="primary-nav__item"><a href="cssbasics.html" class="primary-nav__link">CSSBASICS</a></li>
           <li class="primary-nav__item"><a href="stacked.html" class="primary-nav__link">Simple Stacked Layout</a></li>
+          <li class="primary-nav__item"><a href="bemnav.html" class="primary-nav__link">BEM Nav</a></li>
         </div>
         </ul>
       </nav>
