--- a/stacked.html
+++ b/stacked.html
@@ -16,6 +16,7 @@
           <li class="primary-nav__item"><a href="cssbasics.html" class="primary-nav__link">CSSBASICS</a></li>
           <li class="primary-nav__item"><a href="stacked.html" class="primary-nav__link">Simple Stacked Layout</a></li>
           <li class="primary-nav__item"><a href="bemnav.html" class="primary-nav__link">BEM Nav</a></li>
+          <li class="primary-nav__item"><a href="bemcards.html" class="primary-nav__link">BEM Cards</a></li>
         </div>
         </ul>
       </nav>
