--- a/bemcards.html
+++ b/bemcards.html
@@ -28,12 +28,13 @@
       <h2>HTML&CSS</h2>
       
       <!-- Codepen snippet -->
-<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="KKvqbrx" data-user="sussybaka2002" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/sussybaka2002/pen/KKvqbrx">
-  BEM-Nav</a> by SussyBaka2002 (<a href="https://codepen.io/sussybaka2002">@sussybaka2002</a>)
+<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="mdMMqEz" data-user="sussybaka2002" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/sussybaka2002/pen/mdMMqEz">
+  BEM-cards</a> by SussyBaka2002 (<a href="https://codepen.io/sussybaka2002">@sussybaka2002</a>)
   on <a href="https://codepen.io">CodePen</a>.</span>
 </p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+      <p> BEM may seem like a lot of work at first but when you get to lines of css that could potentialy thousands of lines long it is a way to keep yourself neat and not overflow your code with selectos.</p>
     </article>
     <footer>
       <p>&copy; 2021 Mark Dwomoh</p>
