--- a/bemnav.html
+++ b/bemnav.html
@@ -17,6 +17,7 @@
           <li class="primary-nav__item"><a href="stacked.html" class="primary-nav__link">Simple Stacked Layout</a></li>
           <li class="primary-nav__item"><a href="bemnav.html" class="primary-nav__link">BEM Nav</a></li>
           <li class="primary-nav__item"><a href="bemcards.html" class="primary-nav__link">BEM Cards</a></li>
+          <li class="primary-nav__item"><a href="jsbasics.html" class="primary-nav__link">JAVASCRIPT</a></li>
         </div>
         </ul>
       </nav>
