--- a/cssbasics.html
+++ b/cssbasics.html
@@ -16,9 +16,7 @@
     </header>
     <article>
       
-      <h1>CSS</h1>
-        
-      <h3>CSS Basics HTML & CSS</h3>
+      <h1>CSSBASICS</h1>
       <!-- Codepen snippet -->
 <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="OJjmbyB" data-user="sussybaka2002" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
   <span>See the Pen <a href="https://codepen.io/sussybaka2002/pen/OJjmbyB">
