--- a/cssbasics.html
+++ b/cssbasics.html
@@ -37,7 +37,19 @@
   on <a href="https://codepen.io">CodePen</a>.</span>
 </p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-      <p> Bem is made to keep all of your things incapsulated so that you are organized.</p>
+       <h1>BEM Cards</h1>  
+      <!-- Codepen snippet -->
+<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="mdMMqEz" data-user="sussybaka2002" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/sussybaka2002/pen/mdMMqEz">
+  BEM-cards</a> by SussyBaka2002 (<a href="https://codepen.io/sussybaka2002">@sussybaka2002</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+            <p> A block is a top-level abstraction of a new component like a button/.btn, this can be thought of as a parent.
+
+                Elements can be thought of as child items, they can be placed inside blocks and are denoted by two underscores following the name like .btn__price.
+
+                Modifiers can manipulate the block to give a theme or style to a specific component without inflicting changes on a completely unrelated module, they can be denoted with two dashes following the name like .btn--orange.</p>
     </article>
      
       <h1>Simple Stacked Layout</h1>
@@ -47,17 +59,7 @@
   Untitled</a> by SussyBaka2002 (<a href="https://codepen.io/sussybaka2002">@sussybaka2002</a>)
   on <a href="https://codepen.io">CodePen</a>.</span>
 </p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-      
-            <h1>BEM Cards</h1>  
-      <!-- Codepen snippet -->
-<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="mdMMqEz" data-user="sussybaka2002" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/sussybaka2002/pen/mdMMqEz">
-  BEM-cards</a> by SussyBaka2002 (<a href="https://codepen.io/sussybaka2002">@sussybaka2002</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-      <p> BEM may seem like a lot of work at first but when you get to lines of css that could potentialy thousands of lines long it is a way to keep yourself neat and not overflow your code with selectos.</p>
+      <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
           <footer>
             <p>&copy; 2021 Mark Dwomoh</p>
     </footer>
