--- a/cssbasics.html
+++ b/cssbasics.html
@@ -60,6 +60,7 @@
   on <a href="https://codepen.io">CodePen</a>.</span>
 </p>
       <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+      <p> A SimpleStackedLayout is a layout that organizes its children in a stack, either horizontally or vertically</p>
           <footer>
             <p>&copy; 2021 Mark Dwomoh</p>
     </footer>
