--- a/jsbasics.html
+++ b/jsbasics.html
@@ -27,8 +27,7 @@
   on <a href="https://codepen.io">CodePen</a>.</span>
 </p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-      <p> BEM may seem like a lot of work at first but when you get to lines of css that could potentialy thousands of lines long it is a way to keep yourself neat and not overflow your code with selectos.</p>
-    </article>
+      <p> If statements are used so that if a certain criteria is achieved, for the computer to do something whether that be stopping a program, or starting a new one.</p>
     <footer>
       <p>&copy; 2021 Mark Dwomoh</p>
     </footer>
