--- a/jsbasics.html
+++ b/jsbasics.html
@@ -28,6 +28,9 @@
 </p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       <p> If statements are used so that if a certain criteria is achieved, for the computer to do something whether that be stopping a program, or starting a new one.</p>
+      <p> These are more notes we learned while doing the Java script var x = 8; // function scoped? don't use
+                                                                       let y = 9; // Regular old variable like you're used to
+                                                                       const z = 10; // immutable: Value can't be changed </p>
     <footer>
       <p>&copy; 2021 Mark Dwomoh</p>
     </footer>
