--- a/jsbasics.html
+++ b/jsbasics.html
@@ -31,6 +31,12 @@
       <p> These are more notes we learned while doing the Java script var x = 8; // function scoped? don't use
                                                                        let y = 9; // Regular old variable like you're used to
                                                                        const z = 10; // immutable: Value can't be changed </p>
+      
+       <h2>Arrays</h2>
+      <!--- Codepen Snippet --->
+      <p class="codepen" data-height="300" data-default-tab="js,result" data-slug-hash="yLzXmgd" data-user="captain-absol" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"><span>See the Pen <a href="https://codepen.io/captain-absol/pen/yLzXmgd">
+      Arrays</a> by Captain-Absol (<a href="https://codepen.io/captain-absol">@captain-absol</a>)on <a href="https://codepen.io">CodePen</a>.</span></p><script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+      <p> Inside the code it shows everything that these specific arrays can do like how Using console.log(shopping) in the console will show us everything in the array that has the name shopping. </p>
     <footer>
       <p>&copy; 2021 Mark Dwomoh</p>
     </footer>
